--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/yilisvcs.js"></script>
         <script src="scripts/directives/leftmainpic.js"></script>
+        <script src="scripts/directives/rightmainpic.js"></script>
         <!-- endbuild -->
 </body>
 </html>
