--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/details.css">
     <!-- endbuild -->
   </head>
   <body ng-app="yiliApp">
